# pen

./: .pre-commit-config.yaml  Makefile  README.md  RELEASING.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
src/jpp/: cli.py  config.py  gitsync.py  utils.py  writing.py
src/jpp/io/: config.py  journal.py
src/pen/: __init__.py  cli.py  commands.py  config.py  hookspec.py  journal.py  parsing.py  serializing.py  utils.py
src/pen/io/: config.py  journal.py
tests/: conftest.py  strategies.py  test_cli.py  test_commands.py  test_parsing.py  test_serializing.py  test_utils.py  test_writing.py  utils.py
tests/io/: test_journal.py
tests/test_commands/: jrnl_journal.txt  pen_md_journal.md
