[metadata]
name = jpp
# Bump __version__ in src/jpp/__init__.py as well
version = 0.1.0
author = Peter Schmidbauer
author_email = peter.schmidb@gmail.com
url = http://github.com/pspeter/jpp
project_urls =
    Source=http://github.com/pspeter/jpp
    Tracker=http://github.com/pspeter/jpp/issues
download_url = http://pypi.python.org/pypi/jpp
description = Simple cli that creates and manages text-based journals
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    jpp
    diary
    journal
    note-taking
    daybook
    cli
python_requires = >= 3.6
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
zip_safe = no
package_dir =
    =src
packages = find:
install_requires =
    dateparser
    tomlkit

[options.packages.find]
where = src

[options.package_data]
jpp = py.typed

[options.entry_points]
console_scripts =
    jpp=jpp.cli:main


[isort]
line_length = 88
use_parentheses = True
include_trailing_comma = True
multi_line_output = 3
atomic = true
lines_after_imports = 2
skip = setup.py
not_skip = __init__.py
filter_files = true
known_third_party = pytest,hypothesis,dateparser,tomlkit
known_first_party = jpp

[flake8]
max-line-length = 88
ignore = E203,W503
exclude =
    .git
    __pycache__
    setup.py
    build
    dist
    releases
    .venv
    .tox
    .mypy_cache
    .pytest_cache
    .vscode
    .idea
    .github

[mypy]
disallow_untyped_defs = True
no_implicit_optional = True

[mypy-tomlkit.*]
ignore_missing_imports = True

[mypy-dateparser]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[coverage:paths]
source =
   src
   */site-packages

[coverage:run]
branch = True
parallel = true
source =
    jpp
    tests

[coverage:report]
show_missing = true
precision = 2